fix sideways selector not moving on safari

--- a/components/SidewaysSelector/SidewaysSelector.module.scss
+++ b/components/SidewaysSelector/SidewaysSelector.module.scss
@@ -30,7 +30,7 @@
     list-style: none;
     width: 7rem;
     padding: 0;
-    overflow-x: hidden;
+    overflow-x: scroll;
     scroll-snap-type: x mandatory;
     scroll-behavior: smooth;
     &::-webkit-scrollbar {
@@ -41,12 +41,12 @@
     }
     @media screen and (min-width: 450px) {
       font-size: 1rem;
-      width: 8rem;
+      width: 9rem;
     }
   }
 
   li {
-    min-width: 7rem;
+    min-width: 8rem;
     text-align: center;
     margin: 0 1rem;
     white-space: nowrap;
@@ -56,7 +56,7 @@
 
     @media screen and (min-width: 450px) {
       font-size: 1.2rem;
-      min-width: 8rem;
+      min-width: 9rem;
     }
   }
 }
